--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
-    "nuxt": "^4.2.1",
+    "nuxt": "latest",
     "postcss": "^8.5.6",
     "typescript": "latest"
   },
   "dependencies": {
+    "vue": "latest",
     "echarts": "^6.0.0",
     "vue-echarts": "^8.0.1"
   }
