feat: Refactor chart components and introduce 3D graph support
- Updated BarGraph3D.vue to utilize new chart data structure and improved color handling.
- Added ChartRenderer.vue to dynamically render different chart types based on props.
- Enhanced LineGraph.vue and ScatterPlot.vue for better data handling and visual encoding.
- Removed ModelGraphRenderer.vue as it was redundant with the new ChartRenderer.
- Introduced useChartExplorer.ts for managing chart selection and dimensions.
- Updated vue-echarts.ts to include necessary 3D components for ECharts GL.
- Created chart.ts to define types for chart schemas, selections, and data structures.
- Removed deprecated echartsGL.ts and modelGraph.ts files to streamline codebase.
- Added module.d.ts for Nuxt public runtime configuration.
- Adjusted tsconfig.json to reflect new type paths and ensure compatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "module": "esnext",
+    "lib": ["ESNext"],
     "moduleResolution": "bundler",
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "#modelGraph": ["./src/runtime/types/modelGraph"]
+      "#chart": ["./src/runtime/types/chart"]
     }
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
