feat: update dependencies for echarts and vue-echarts, add SSR-friendly VChart stub

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM", "dom"],
     "moduleResolution": "bundler",
     "strict": true,
     "baseUrl": ".",
