--- a/playground/.output/server/package.json
+++ b/playground/.output/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-model-graphs-prod",
-  "version": "0.1.0",
+  "version": "0.2.3",
   "type": "module",
   "private": true,
   "dependencies": {
@@ -14,17 +14,13 @@
     "@vue/server-renderer": "3.5.25",
     "@vue/shared": "3.5.25",
     "devalue": "5.5.0",
-    "echarts": "6.0.0",
     "entities": "4.5.0",
     "estree-walker": "2.0.2",
     "hookable": "5.5.3",
     "source-map-js": "1.2.1",
-    "tslib": "2.3.0",
     "ufo": "1.6.1",
     "unhead": "2.0.19",
     "vue": "3.5.25",
-    "vue-bundle-renderer": "2.2.0",
-    "vue-echarts": "8.0.1",
-    "zrender": "6.0.0"
+    "vue-bundle-renderer": "2.2.0"
   }
 }
